# cWordle

./: CMakeLists.txt  main.c
.github/classroom/: autograding.json
inc/: wordle.h
src/: main.c  wordle.c
